--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Bakule Kembang</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css\main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <!-- <link rel="stylesheet" href="css\layout.css" /> -->
-    <link rel="stylesheet" href="css\components\navbar.css" />
-    <link rel="stylesheet" href="css\components\footer.css" />
+    <link rel="stylesheet" href="css/components/navbar.css" />
+    <link rel="stylesheet" href="css/components/footer.css" />
     <!-- <link rel="stylesheet" href="css\components\card.css" /> -->
 
     <!-- favicon -->
