--- a/mentah.html
+++ b/mentah.html
@@ -21,5 +21,12 @@
         <span class="nav-text">Product</span>
       </a>
     </li>
+
+    <li class="nav-item">
+      <a href="#categories" class="nav-link" data-page="categories">
+        <i class="fas fa-list"></i>
+        <span class="nav-text">Kategori</span>
+      </a>
+    </li>
   </ul>
 </div>
