--- a/mentah.html
+++ b/mentah.html
@@ -18,7 +18,7 @@
     <li class="nav-item">
       <a href="#products" class="nav-link" data-page="products">
         <i class="fas fa-store"></i>
-        <span class="nav-text">Product</span>
+        <span class="nav-text">Produk</span>
       </a>
     </li>
 
@@ -28,5 +28,36 @@
         <span class="nav-text">Kategori</span>
       </a>
     </li>
+
+    <li class="nav-item">
+      <a href="#about" class="nav-link" data-page="about">
+        <i class="fas fa-info-circle"></i>
+        <span class="nav-text">Tentang</span>
+      </a>
+    </li>
+
+    <li class="nav-item">
+      <a href="#contact" class="nav-link" data-page="contact">
+        <i class="fas fa-phone"></i>
+        <span class="nav-text">Kontak</span>
+      </a>
+    </li>
   </ul>
+
+  <!-- Cart & Actions -->
+  <div class="nav-actions">
+    <button class="cart-btn" id="cart-btn" aria-label="Open cart">
+      <i class="fas fa-shopping-cart"></i>
+      <span class="cart-text">Cart</span>
+      <span class="cart-count" id="cart-count">0</span>
+    </button>
+
+    <button class="theme-toggle" id="theme-toggle" aria-label="Toogle theme">
+      <i class="fas fa-moon"></i>
+    </button>
+
+    <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu">
+      <i class="fas fa-bars"></i>
+    </button>
+  </div>
 </div>
