--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bakule Kembang</title>
 
+    <!-- Base URL fix path, mbuh ngaruh ora -->
+    <base href="./" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css" />
     <!-- <link rel="stylesheet" href="css\layout.css" /> -->
