--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css" />
-    <!-- <link rel="stylesheet" href="css\layout.css" /> -->
+    <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components/navbar.css" />
     <link rel="stylesheet" href="css/components/footer.css" />
-    <!-- <link rel="stylesheet" href="css\components\card.css" /> -->
+    <link rel="stylesheet" href="css/components/cart.css" />
+    <link rel="stylesheet" href="css/components/product-card.css" />
+    <link rel="stylesheet" href="css/components/modal.css" />
+    <link rel="stylesheet" href="css/pages/home.css" />
+    <link rel="stylesheet" href="css/pages/products.css" />
+    <link rel="stylesheet" href="css/pages/product-detail.css" />
+    <link rel="stylesheet" href="css/pages/cart.css" />
+    <link rel="stylesheet" href="css/pages/about.css" />
 
     <!-- favicon -->
 
