--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/layout.css" />
+
     <link rel="stylesheet" href="css/components/navbar.css" />
     <link rel="stylesheet" href="css/components/footer.css" />
     <link rel="stylesheet" href="css/components/product-card.css" />
     <link rel="stylesheet" href="css/components/modal.css" />
+    <link rel="stylesheet" href="css/components/cart-sidebar.css" />
+
     <link rel="stylesheet" href="css/pages/home.css" />
     <link rel="stylesheet" href="css/pages/products.css" />
     <link rel="stylesheet" href="css/pages/cart.css" />
