--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     <link rel="stylesheet" href="css/components/cart-sidebar.css" />
 
     <link rel="stylesheet" href="css/pages/home.css" />
-    <link rel="stylesheet" href="css/pages/cart.css" />
     <link rel="stylesheet" href="css/pages/products.css" />
     <link rel="stylesheet" href="css/pages/categories.css" />
     <link rel="stylesheet" href="css/pages/about.css" />
     <link rel="stylesheet" href="css/pages/contact.css" />
+    <link rel="stylesheet" href="css/pages/cart.css" />
+    <link rel="stylesheet" href="css/pages/checkout.css" />
 
     <!-- favicon -->
 
