--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" href="css/pages/home.css" />
     <link rel="stylesheet" href="css/pages/products.css" />
+    <link rel="stylesheet" href="css/pages/product-detail.css" />
     <link rel="stylesheet" href="css/pages/categories.css" />
     <link rel="stylesheet" href="css/pages/about.css" />
     <link rel="stylesheet" href="css/pages/contact.css" />
