benerin navbar & footer bareng ayang

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <link rel="stylesheet" href="css/pages/order-detail.css" />
 
     <!-- favicon -->
-
+     <link rel="icon" href="assets/image/logo/logo-bakule-kembang-gelap.png" type="image/png">
+     
     <!-- Gogle Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
